--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,10 +10,10 @@
     </div class="align-self-center">
     <div class="home-btns row m-4">
     <form method="get" action="/student/login" style="display: inline-flex;" class="col">
-    <button type="button" class="btn btn-primary">Student</button>
+    <button  class="btn btn-primary">Student</button>
     </form>
     <form method="get" action="/faculty/login" style="display: inline-flex;" class="col">
-    <button type="button" class="btn btn-primary" >Faculty</button>
+    <button  class="btn btn-primary" >Faculty</button>
     </form>
     </div>
     </div>
