--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,18 +2,18 @@
 <body class="home-body "class="container text-center">
     <div class="row offset-3 justify-content-center align-items-center">
         <div>
-    <h1 class="col m-3 ml-4">WELCOME TO GEETHANJALI</h1>
+    <h2 class="col h0me-heading">WELCOME TO GEETHANJALI</h2>
     </div>
     <br>
     <div>
-    <h2 class="col m-2">WEB-BASED ATTENDANCE MANAGEMENT SYSTEM</h2>
+    <h3 class="col m-2">WEB-BASED ATTENDANCE MANAGEMENT SYSTEM</h3>
     </div class="align-self-center">
     <div class="home-btns row m-4">
     <form method="get" action="/student/login" style="display: inline-flex;" class="col">
-    <button type="button" class="btn btn-primary" onclick="window.location.href='http://localhost:2000/student/login'">Student</button>
+    <button class="btn btn-primary">Student</button>
     </form>
     <form method="get" action="/faculty/login" style="display: inline-flex;" class="col">
-    <button type="button" class="btn btn-primary" onclick="window.location.href='http://localhost:2000/faculty/login'">Faculty</button>
+    <button class="btn btn-primary">Faculty</button>
     </form>
     </div>
     </div>
