--- a/views/faculty/attendance.ejs
+++ b/views/faculty/attendance.ejs
@@ -1,47 +1,60 @@
 <% layout("../layouts/facultyBoilerplate") -%>
+
 <body class="courses-body">
     <div class="row">    
-              <div class="course-name">
-                <h2 style="margin-left: 2rem;"><%=course.course%><br></h2>
-                <form action="/faculty/courses/<%=course._id%>" method="post" novalidate class="needs-validation">
-                    <div class="date"style="margin-left: 2rem;">
-                    <label for="date">select a date:</label>
+        <!-- Course Name Section -->
+        <div class="course-name">
+            <h2 style="margin-left: 2rem;">
+                <%= course.course %><br>
+            </h2>
+            <!-- Form to select date and mark attendance -->
+            <form action="/faculty/courses/<%= course._id %>" method="post" novalidate class="needs-validation">
+                <!-- Date Selection -->
+                <div class="date" style="margin-left: 2rem;">
+                    <label for="date">Select a date:</label>
                     <input type="date" id="date" name="date" required>                  
-                    </div>
-                    <div>
+                </div>
+                
+                <!-- Attendance Table -->
+                <div>
                     <table class="table">
                         <thead>
-                          <tr>
-                            <th class="col"scope="col">S.no</th>
-                            <th class="col"scope="col">Roll no.</th>
-                            <th class="col"scope="col">Name</th>
-                            <th class="col"scope="col">Status</th>
-                          </tr>
+                            <tr>
+                                <th class="col" scope="col">S.no</th>
+                                <th class="col" scope="col">Roll no.</th>
+                                <th class="col" scope="col">Name</th>
+                                <th class="col" scope="col">Status</th>
+                            </tr>
                         </thead>
                         <tbody>
-                          <%for(student of students){%>
-                            <tr>
-                                <td class="col-0.5"><%=++x%></td>
-                                <td class="col-3"><%=student.username%><select id="none" name="student">
-                                  <option value="<%=student.username%>"></option>
-                                </select>
-                                  </td>
-                                <td class="col-3"><%=student.name%></td>
-                                <td class="col-3"><select id="myDropdown" name="status">
-                                    <option value="present">present</option>
-                                    <option value="absent">absent</option>
-                                  </select>                                
-                                  </td>
-                              </tr>
-                              <%}%>
+                            <% for (student of students) { %>
+                                <tr>
+                                    <td class="col-0.5"><%= ++x %></td>
+                                    <td class="col-3">
+                                        <%= student.username %>
+                                        <select id="none" name="student">
+                                            <option value="<%= student.username %>"></option>
+                                        </select>
+                                    </td>
+                                    <td class="col-3"><%= student.name %></td>
+                                    <td class="col-3">
+                                        <select id="myDropdown" name="status">
+                                            <option value="present">Present</option>
+                                            <option value="absent">Absent</option>
+                                        </select>
+                                    </td>
+                                </tr>
+                            <% } %>
                         </tbody>
-                      </table>
-                      </div>
-                      <div class="button-container">
-                        <button class="btn btn-primary">Submit</button>
-                      </div>
-                  </form>
-              </div>
-              <br>
-              
+                    </table>
+                </div>
+                
+                <!-- Submit Button -->
+                <div class="button-container">
+                    <button class="btn btn-primary">Submit</button>
+                </div>
+            </form>
+        </div>
+        <br>
+    </div>
 </body>
