--- a/views/student/login.ejs
+++ b/views/student/login.ejs
@@ -1,22 +1,34 @@
 <% layout("../layouts/boilerplate") -%>
+
 <body style="height: 100vh; width: 100%;">
-    <div class="container text-center" >
-    <div class="course-create row align-items-center offset-3 course-card" style="margin-top: 5rem;">
-                  <form method="post" action="/student/login" class="col needs-validation" novalidate>
-                  <h2 class="col">Student Login</h2>
-                        <div class="mb-3 col">
-                            <label for="username" class="form-label"></label>
-                            <input id="username"  name="username" class="form-control" placeholder="username" type="text" required>
-                        </div> 
-                        <div class="mb-3 col">
-                            <label for="password" class="form-label"></label>
-                            <input id="password"  name="password" class="form-control" placeholder="password" type="password" required>
-                        </div>    
-                      <div class="button-container">
-                        <button type="submit" class="btn btn-dark btn-add mt-3">login</button>
-                        </div>
-                    </form>
+    <!-- Main Container -->
+    <div class="container text-center">
+        <!-- Course Create Form Container -->
+        <div class="course-create row align-items-center offset-3 course-card" style="margin-top: 5rem;">
+            <!-- Student Login Form -->
+            <form method="post" action="/student/login" class="col needs-validation" novalidate>
+                <h2 class="col">Student Login</h2>
+                
+                <!-- Username Input -->
+                <div class="mb-3 col">
+                    <label for="username" class="form-label"></label>
+                    <input id="username"  name="username" class="form-control" placeholder="username" type="text" required>
+                </div> 
+                
+                <!-- Password Input -->
+                <div class="mb-3 col">
+                    <label for="password" class="form-label"></label>
+                    <input id="password"  name="password" class="form-control" placeholder="password" type="password" required>
+                </div>    
+                
+                <!-- Login Button -->
+                <div class="button-container">
+                    <button type="submit" class="btn btn-dark btn-add mt-3">login</button>
+                </div>
+            </form>
+            
+            <!-- Sign Up Link -->
             <p>Don't have an account? <a href="/student/signup" style="text-decoration: underline; color: white;">Sign up here</a></p>
         </div>
     </div>                  
-  </body>
+</body>
