made many changes

--- a/layouts/adminBoilerplate.ejs
+++ b/layouts/adminBoilerplate.ejs
@@ -44,6 +44,18 @@
                 <a href="/admin/timetable">Time Table</a>
             </div>
             <div class="nav-element">
+                <a href="/admin/subjects">Subjects</a>
+            </div>
+            <div class="nav-element">
+                <a href="/admin/semesters">Semesters</a>
+            </div>
+            <div class="nav-element">
+                <a href="/admin/branches">Branches</a>
+            </div>
+            <div class="nav-element">
+                <a href="/admin/academic-years">Academic Year</a>
+            </div>
+            <div class="nav-element">
                 <a href="/admin/logout">Logout</a>
             </div>
         </div>
