--- a/views/admin/section.ejs
+++ b/views/admin/section.ejs
@@ -2,28 +2,28 @@
 <body>
     <!-- Button to add a new section -->
     <form method="get" action="/admin/section/new" class="mb-4">
-      <button type="submit" class="btn btn-success">Add New Section</button>
-  </form>
+        <button type="submit" class="btn btn-success">Add New Section</button>
+    </form>
+
     <div class="course-details">
-        <h1>Ongoing sections:</h1>
-        <div class="course-cards">
-          <!-- Loop through each course and display it -->
-          <% for (section of sections) { %>
-            <div class="card col-md-3 course-card">
-              <div class="card-body">
-                <h2 style="display: inline;"><%= section.branch %></h2>
-                <h2 class="card-subtitle mb-2 text-body-primary" style="display: inline;"> -<%= section.name %></h2>
-                <div class="button-container mt-3">
-                  <a href="/admin/section/<%= section._id %>" class="btn btn-dark m-2">
-                      View
-                  </a>
-                  <form method="post" action="/admin/section/<%= section._id %>?_method=DELETE" class="d-inline" onsubmit="return confirm('Are you sure you want to delete this section? This action cannot be undone.')">
-                      <button type="submit" class="btn btn-danger">Delete</button>
-                  </form>
-              </div>
-              </div>
-            </div>
-          <% } %>
+        <h1>Ongoing Sections:</h1>
+        <div class="course-cards row">
+            <!-- Loop through each section and display it -->
+            <% for (let section of sections) { %>
+                <div class="card col-md-3 course-card">
+                    <div class="card-body">
+                        <h2 style="display: inline;"><%= section.branch.name %></h2>
+                        <h3 class="card-subtitle mb-2 text-body-primary" style="display: inline;"> - <%= section.name %></h3>
+                        <p class="card-text"><%= section.branch.academicYear.name %></p>
+                        <div class="button-container mt-3">
+                            <a href="/admin/section/<%= section._id %>" class="btn btn-dark m-2">View</a>
+                            <form method="post" action="/admin/section/<%= section._id %>?_method=DELETE" class="d-inline" onsubmit="return confirm('Are you sure you want to delete this section? This action cannot be undone.')">
+                                <button type="submit" class="btn btn-danger">Delete</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            <% } %>
         </div>
-      </div>
+    </div>
 </body>
